--- a/src/themes/general.css
+++ b/src/themes/general.css
@@ -52,7 +52,7 @@
     right: 0;
 }
 .relative{
-    position: relative;
+    position: relative !important;
 }
 .max-size{
     width: 100%;
@@ -432,9 +432,12 @@
 }
 .cart-item-container{
     min-width: 300px;
-    max-height: 70vh;
     font-size: 15px;
     white-space: nowrap;
+}
+.cart-item-sub-container{
+    max-height: 70vh;
+    overflow-y: auto;
 }
 .cart-item-container p{
     padding: 5px;
@@ -476,21 +479,32 @@
     color: white;
     background-color: black;
 }
-.cart-item-header-footer{
+.cart-item-header-and-footer{
     min-width: 300px;
     color: white;
     text-align: center;
     background-color: red;
 }
 .cart-item-checkout{
-    width: 50%;
+    width: 95% !important;
     cursor: pointer;
+    margin-top: 10px;
     margin-left: 50%;
+    margin-bottom: 10px;
+    color: white !important;
+    outline: none !important;
+    border: none !important;
+    padding: 10px !important;
     transform: translateX(-50%);
     background-color: rgb(0, 0, 0, 0.30);
 }
 .cart-item-checkout:hover{
+    color: black !important;
     background-color: rgb(0, 0, 0, 0.60);
+}
+.cart-item-checkout:active{
+    color: black !important;
+    background-color: orange !important;
 }
 .no-scroll{
     overflow: hidden;
@@ -618,6 +632,7 @@ h4{
     height: 100%;
     border-left: 1px solid lightgray;
     border-right: 1px solid lightgray;
+    background-color: white;
 }
 .data-entry-sub-container{
     height: 100%;
@@ -662,11 +677,17 @@ h4{
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.data-entry-settings-container .input-entry div{
+    width: 93%;
+}
 .data-entry-settings-container .input-entry input{
     width: 93%;
 }
 .data-entry-settings-container .input-entry textarea{
-    width: 93%;
+    width: 96%;
+}
+.data-entry-settings-container .input-entry svg{
+    width: 20px;
 }
 .data-entery-edit-action{
     position: relative;
@@ -732,6 +753,7 @@ h4{
 .data-entry-inner-container{
     overflow-y: auto;
     height: 100%;
+    padding: 20px;
 }
 .data-entry-image-container{
     width: 40%;
@@ -784,23 +806,49 @@ h4{
     content: "$";
     transform: translateY(-50%);
 }
-.input-entry h4{
-    margin-bottom: 5px;
+.input-entry{
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.input-entry svg{
+    position: absolute;
+    top: -5px;
+    left: 0;
+    color: gray;
+    width: 48%;
+}
+.input-entry div{
+    position: absolute;
+    width: 51%;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    cursor: text;
+    text-align: left;
+    padding-left: 20px;
+    transform: translate3d(-50%, -50%, 0);
 }
 .input-entry label{
     user-select: none;
     cursor: pointer;
+    width: 50%;
+    background-color: rebeccapurple;
 }
 .input-entry input, select, textarea{
     outline: none;
     padding: 10px;
     width: 50%;
     resize: none;
-    border-radius: 10px;
-    border: 1px solid lightgray;
+    border: none;
+    border-bottom: 1px solid lightgray;
+    background-color: rgb(0, 0, 0, 0.03);
+}
+.input-entry input{
+    padding: 20px;
 }
 .input-entry select{
-    width: 53%;
+    width: 57%;
     cursor: pointer;
 }
 .input-entry input[type=date]{
@@ -811,6 +859,9 @@ h4{
     padding: 0;
     width: 15px;
     cursor: pointer;
+}
+.input-entry textarea{
+    
 }
 .input-entry input:hover{
     border-color: dodgerblue;
@@ -831,20 +882,26 @@ h4{
     border-color: skyblue;
 }
 .admin-nav-bar{
-    color: white;
-    background-color: red;
+    color: red;
+    background-color: white;
 }
 .admin-nav-bar div{
+    color: white;
+    padding-top: 5px;
     padding-bottom: 10px;
+    border-top: 1px solid white;
+    background-color: red;
 }
 .admin-nav-bar h2{
-    padding-left: 20px;
+    padding: 8px;
     margin-top: 0;
+    padding-left: 20px;
     margin-bottom: 5px;
 }
 .admin-nav-bar span{
-    margin: 10px;
     cursor: pointer;
+    padding: 0 10px 0 10px;
+    border-right: 1px solid white;
 }
 .admin-nav-bar span:hover{
     color: black;
@@ -1391,4 +1448,41 @@ h4{
 }
 .error h2{
     color: gray;
+}
+.landing-page{
+}
+.landing-page h2, h3{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.landing-page h3{
+    color: gray;
+}
+.landing-page .header{
+    padding: 20px;
+    padding-bottom: 150px;
+    background-color: rgb(255, 0, 0, 0.1);
+}
+.landing-page .logo{
+    width: 40%;
+    border-radius: 50%;
+}
+.landing-page-products{
+    display: inline-block;
+    margin: 20px;
+    background-color: rgb(0, 0, 0, 0.03);
+}
+.landing-page-products:hover{
+    background-color: white;
+    box-shadow: 0 0 3px 3px rgb(0, 0, 0, 0.1);
+}
+.landing-page-products .landing-page-flex{
+    display: flex;
+}
+.landing-page-products img{
+    width: 200px;
+    height: 200px;
+}
+.landing-page-products div{
+    padding: 10px;
 }
